--- a/lab3/task2/styles.css
+++ b/lab3/task2/styles.css
@@ -4,33 +4,34 @@ body {
 }
 
 .tasks {
-    /* Make tasks container a flexbox */
     display: flex;
-    /* Stack items vertically */
     flex-direction: column;
-    /* Remove default margin */
-    margin: 0;
-    /* Remove default padding */
-    padding: 0;
 }
 
 .tasks label {
-    /* Arrange label and checkbox horizontally */
     display: flex;
-    /* Align checkbox vertically */
     align-items: center;
-    /* Add spacing between items */
     margin-bottom: 5px;
-    /* Reset default text decoration */
     text-decoration: none;
 }
 
 .tasks label input[type="checkbox"] {
-    /* Space between checkbox and text */
     margin-right: 10px;
     padding: 5px;
 }
 
+.deleteButton {
+    background-color: red;
+    color: aliceblue;
+    border: aliceblue;
+    border-radius: 5px;
+    margin: 10px;
+    padding: 5px;
+}
+
+.deleteButton:hover {
+    background-color: rgb(195, 60, 60);
+}
 
 .tasks label input[type="checkbox"]:checked+span {
     text-decoration: line-through;
