--- a/lab3/task2/styles.css
+++ b/lab3/task2/styles.css
@@ -1,4 +1,6 @@
 body {
+    font-size: larger;
+    margin-left: 40%;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #f5f5f5;
 }
@@ -6,6 +8,23 @@ body {
 .tasks {
     display: flex;
     flex-direction: column;
+    text-align: center;
+}
+
+.add input {
+    font-size: 16px;
+    border: #f5f5f5;
+    border-radius: 2px;
+    padding: 8px;
+}
+
+.add button {
+    padding: 10px;
+    font-size: 14px;
+    border-radius: 5px;
+    border: #f5f5f5;
+    color: white;
+    background-color: rgb(48, 139, 230);
 }
 
 .tasks label {
@@ -13,6 +32,7 @@ body {
     align-items: center;
     margin-bottom: 5px;
     text-decoration: none;
+    text-align: center;
 }
 
 .tasks label input[type="checkbox"] {
