--- a/lab4/task2/src/app/product-list/product-list.component.css
+++ b/lab4/task2/src/app/product-list/product-list.component.css
@@ -1,4 +1,39 @@
+.item {
+    max-width: 10%;
+    display: inline-flex;
+    flex-direction: column;
+    margin: 1%;
+    background-color: rgba(220, 220, 220, 50%);
+    border: solid;
+    border-color: rgba(220, 220, 220, 50%);
+    border-radius: 3%;
+    vertical-align: top;
+}
 
+.rating {
+    font-weight: 600;
+    font-size: medium;
+    margin: 0 5px;
+}
+
+
+.image-gallery button {
+    background-color: #f14635;
+    border: 2% solid #ced4da;
+    color: white;
+    padding: 5px 10px;
+    margin: 0 5px;
+    cursor: pointer;
+    align-items: center;
+}
+
+.image-gallery button:hover {
+    opacity: 0.8;
+}
+
+a {
+    margin-right: 10px;
+}
 
 /*
 Copyright Google LLC. All Rights Reserved.
