--- a/lab4/task2/src/app/product-list/product-list.component.html
+++ b/lab4/task2/src/app/product-list/product-list.component.html
@@ -1,6 +1,7 @@
 <h2>Products</h2>
 
-<div *ngFor="let product of products">
+<div *ngFor="let product of products" class="item">
+  <img [src]="product.imageSrc" />
   <h3>
     <a
       [title]="product.name + ' details'"
@@ -9,8 +10,12 @@
       {{ product.name }}
     </a>
   </h3>
+  <div class="image-gallery">
+    <p *ngIf="product.description">Description: {{ product.description }}</p>
 
-  <p *ngIf="product.description">Description: {{ product.description }}</p>
-
-  <button type="button" (click)="share()">Share</button>
+    <p class="rating">Rating: {{ product.rating }}</p>
+    <button type="button" (click)="share(product.itemLink)">Share</button>
+  </div>
+  <br />
+  <p></p>
 </div>
